--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-language: minimal
+language: python
 sudo: false
+python: 3.7
 
 git:
   depth: 2
@@ -17,8 +18,11 @@ env:
 matrix:
   fast_finish: true
 
+install:
+  - pip install pytest hypothesis
+
 script:
-  - echo "Testing would occur here."
+  - pytest
 
 stages:
   - test
@@ -28,8 +32,8 @@ stages:
 jobs:
   include:
     - stage: deploy
-      script:
-        - echo "Deploying..."
+      install: skip
+      script: skip
       deploy:
         - provider: releases
           edge: true
