--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ jobs:
     deploy:
     - provider: releases
       skip_cleanup: true
+      file: demo.py
       edge: true
       release_notes_file: "release-notes/${TRAVIS_TAG}.md"
       api_key: $GITHUB_TOKEN
